# agentflow

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docker/: .dockerignore  Dockerfile  Dockerfile.worker  docker-compose.yml  prometheus.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md
docs/grafana/: agent-dashboard.json  workflow-dashboard.json
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AgentPanel.tsx  DLQPanel.tsx  Dashboard.tsx  SettingsPanel.tsx  WorkflowDetail.tsx  WorkflowList.tsx
frontend/src/components/common/: ErrorMessage.tsx  LoadingSpinner.tsx  StatsCard.tsx  StatusBadge.tsx
src/agentflow/: __init__.py  config.py  main.py
src/agentflow/agents/: __init__.py  analysis_agent.py  base.py  code_agent.py  factory.py  research_agent.py  writer_agent.py
src/agentflow/api/: __init__.py  agents.py  dashboard.py  health.py  middleware.py  router.py  routes.py  schemas.py  websocket.py  workflows.py
src/agentflow/core/: __init__.py  celery_app.py  engine.py  exceptions.py  orchestrator.py  resilient_engine.py  state.py
src/agentflow/core/fault_tolerance/: __init__.py  bulkhead.py  circuit_breaker.py  dead_letter_queue.py  retry.py
src/agentflow/core/tasks/: __init__.py  workflow_tasks.py
src/agentflow/models/: __init__.py  agent.py  base.py  task.py  workflow.py
src/agentflow/observability/: __init__.py  logging_config.py  metrics.py  tracing.py
src/agentflow/services/: __init__.py  llm_service.py
src/agentflow/utils/: logging.py
tests/: conftest.py  test_agents.py  test_engine.py  test_fault_tolerance.py  test_health.py  test_observability.py
